members/static/members.css
/* Member Pages Style */

html {
	height: 100%;
	box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
	min-height: 100%;
	margin: 0;
	padding: 0;
	font-family: 'Roboto', sans-serif;
	position: relative;
}

a {
	 text-decoration: none;
	 color: #5987C6;
}

p {
	 font-family: 'Roboto', sans-serif;
	 font-weight: normal;
	 font-size: 14px;
	 line-height: 1.6;
}

.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; }
.hidden { display: none; visibility: hidden; }
.visuallyhidden { position: absolute !important;
	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
	clip: rect(1px, 1px, 1px, 1px);
}
.invisible { visibility: hidden; }
.clearfix:after  { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
.clearfix { zoom: 1; }

/* Header */

#main-nav {
	background-color: RGBA(232, 232, 232, 1);
	position: fixed;
	top: 0;
	left: 0;
}

#home-nav {
	background-color: RGBA(246, 246, 246, 1);
	margin: 0;
}

#header_container {
	width: 100%;
	color: #5987C6;
	font-family: 'Roboto', sans-serif;
	font-size: 16px;
	font-weight: 700;
	background-color: RGBA(246, 246, 246, 1);
	z-index: 2000;
	position: relative;
}

#header_container a {
	color: RGBA(94, 138, 196, 1);
	text-transform: uppercase;
	padding-right: 20px;
	margin-right: 0;
	letter-spacing: .3px;
}

#header_container a.slack-a {
	color: RGBA(231, 74, 114, 1);
}

#jumbotron {
	position: relative;
	top: 0;
	left: 0;
	width: 100%;
	z-index: 2
}

.logo-img {
	content: url(img/logo.png);
	position: absolute;
	z-index: 2000;
	top: 10%;
	left: 37%;
	height: 300px;
  width: 310px;
	z-index: 2000;
}

.sec-logo {
	content: url(img/logo-line.png);
	position: fixed;
	top: 0;
	left: 0;
	height: 85px;
	margin-left: 1%;
	z-index: 2000;
}

#jumbo-img {
	content: url(img/jumbo.png);
	width: 100%;
}

#logo {
	float: left;
	padding-left: 1%;
}

#content h2 {
	display: block;
	text-align: center;
	font-size: 1.875em;
}

/* Body */

#content a {
	outline:none;
}

#content img {
	margin: 10px auto;
}

#welcome-p {
	font-size: 1.2em;
	text-align: center;
}

#profile_form {
	background-color: RGBA(239, 238, 231, 1);
	padding: 2%;
	margin-left: 15%;
	width: 70%;
}

textarea#id_bio {
	background-color: white;
	height: 100px;
}

.public_bool {
	width: 25%;
}

select#id_public_profile.browser-default {
	width: 45%;
}

#reg_box, #login_box {
	margin-top: 3%;
}

#login_form,  #registration_form {
	background-color: RGBA(232, 232, 232, 1);
	margin-right: 0;
	margin-top: 5%;
	border-radius: 2px;
}

#login_form h1, #registration_form h1 {
	background-color: RGBA(63, 104, 140, .7);
	padding: 2%;
	border-radius: 2px;
}

#login_form th, #registration_form th {
	padding-left: 10%;
}

#login_reset {
	padding-bottom: 5%;
}

#registration_form input {
	width: 75%;
}

#registration_form {
	padding-bottom: 5%;
}

#profile_form tr, #registration_form tr, #login_form tr {
	border: none;
}

#profile_form input, #registration_form input, #login_form input {
	padding-left: 2%;
	background-color: white;
	border-bottom: none;
}

#login_form input{
	padding-left: 2%;
	margin-right: 2%;
}

.sub-btn {
	margin-top: 2%;
	margin-left: 35%;
}

#login-btn, #reg-btn {
	margin-left: 20%;
	margin-right: 10%;
	width: 35%;
	background-color: RGBA(127, 175, 147, 1);
}

#loginonly-btn {
	margin-left: 30%;
	width: 40%;
	background-color: RGBA(127, 175, 147, 1);
}

#event_cal {
	margin-left: 10%;
}

.card {
	text-align: center;
	background-color: RGBA(94, 138, 196, 1);
	/*z-index: -1;*/
}

.event-card {
	width: 330px;
}

.tabs {
	color: RGBA(44, 148, 231, 1);
}

.tabs .tab {
	text-transform: none;
}

.tabs .tab a {
	color: RGBA(44, 148, 231, 1)
}

.tabs .indicator {
	background-color: RGBA(44, 148, 231, 1);
}

.mem-tabs .indicator {
	background-color: RGBA(44, 148, 231, 1);
}

.prof-tabs .indicator {
	width: 15%;
	background-color: RGBA(44, 148, 231, 1);
}

.triptic {
	text-align: justify;
}

.triptic > div {
	width: 33%;
	display: inline-block;
	vertical-align: top;
	/* IE fix. */
	*display: inline;
	zoom: 1;
}

.triptic:after {
	content: "";
	width: 100%;
	display: inline-block;
}

.lightbg {
	margin-top: 5%;
	margin-bottom: 140px;
	min-height: 500px;
	padding-top: 10px;
	overflow: auto;
}

.user-card {
	width: 190px;
	border: solid 3px #EEE;
	margin: 10px;
	text-align: center;
	display: inline-block;
}

.user-card a {
	padding: 10px 0;
	display: block;
	background:#FFFFFF;
}

.user-card a.photo {
	height: 180px;
	background-color: #FFF;
	font-size: 120px;
	color: #DDD;
	text-decoration: none;
}

.member-photo {
	float: left;
	margin: 0px 1em 1em 0px;
}

dt, dd {
	display: inline-block;
	margin: 0.25em;
}
dt { font-weight: bold; }
dd:after { content:"|"; margin-left: 0.5em; font-size: 1.2em; }
dl dd:last-child:after { content: ""; }
table th { padding: 0.5em 0.5em 0.25em; }
table th:first-child { text-align: left; width: 15%;}
table td:first-child, table td:last-child { text-align: left; }
table td { text-align: center; border-bottom: 1px solid #ccc; padding: 0.5em; }

/* Footer */

footer.page-footer {
	padding: 1px;
	background: RGBA(61, 61, 61, .9);
	margin: 0;
}

#copyright {
	float: left;
	margin: 10px;
	margin-top:16px;
}

.footer-copyright {
	color: white;
	font-weight: 400;
}

#social {
	float: left;
	margin: 10px;
	margin-left: 130px;
	/*width: 132px;*/
}

#nadine-link {
	color: RGBA(245, 245, 245, 1);
	font-weight: bold;
	letter-spacing: .5px;
}

#fb {
	display: block;
	width: 32px;
	height: 32px;
	float: left;
	margin-right: 10px;
	background-image: url(img/facebook_32.png);
	text-indent: -9999px;
}

#tw {
	display: block;
	width: 32px;
	height: 32px;
	float: left;
	margin-right: 10px;
	background-image: url(img/twitter_32.png);
	text-indent: -9999px;
}

#ye {
	display: block;
	width: 32px;
	height: 32px;
	float: left;
	margin-right: 10px;
	background-image: url(img/yelp_32.png);
	text-indent: -9999px;
}

#inst {
	display: block;
	width: 32px;
	height: 32px;
	float: left;
	margin-right: 10px;
	background-image: url(img/instagram_32.png);
	text-indent: -9999px;
}

@media only screen and (max-width: 990px) {

	 .event-card {
		 width: 250px;
	 }

	 #home_cal {
		 width: 200px;
	 }
}

@media only screen and (max-width: 1100px) {

	#profile_form {
		width: 100%;
		margin-left: 0;
	}

	#profile_form input {
		margin-right: 1%;
	}
}

/*Dynamic top margin when using large screen*/
@media only screen and (min-width: 1600px) {
	#jumbotron {
		margin-top: 2%;
	}
}

